# python_stream_downloader_converter

./: .gitignore  main.py  pyproject.toml  requirements.txt  version.py  version.txt
.github/workflows/: build.yml  main.yml  manual.yml  update_version.py  version-updater.yml
Helpers/: ConverterFactory.py  DownloaderFactory.py
Helpers/Converters/: PydubConverter.py
Helpers/Providers/: Pytube3Provider.py  PytubefixProvider.py  SavifyProvider.py  YoutubeProvider.py  YtdlpProvider.py
Helpers/Providers/ph/: PhProvider.py
Helpers/Utils/: ApplicationEnums.py  ApplicationVariables.py  CollectionsUtils.py  Directory.py  DirectoryUtils.py  FileMover.py  InputUtils.py  MenuUtils.py  TitleBuilder.py
Helpers/converters/: ConverterHelper.py
app/: main.py
app/config/: LoggerConfig.py
app/converters/audio/: AudioConverter.py  PydubConverter.py
app/extractors/audio/: AudioExtractor.py
app/helpers/utils/: ApplicationEnums.py  ApplicationVariables.py  CollectionsUtils.py  DirectoryUtils.py  FileMover.py  QueueUtil.py  ValidatorUtil.py
app/providers/: ProviderBase.py  ProviderFactory.py  ProvidersEnum.py  SavifyProvider.py  YtDlpProvider.py
app/ui/: app_ui.py  menu.py
config/: LoggerConfig.py
devscripts/: update-version.py
modules/pytube/: __init__.py  __main__.py  captions.py  cipher.py  cli.py  extract.py  helpers.py  innertube.py  parser.py  query.py  request.py  streams.py
modules/pytube3/: __init__.py  __main__.py  captions.py  cipher.py  cli.py  extract.py  helpers.py  monostate.py  query.py  streams.py
modules/savify/: savify.py  spotify.py
(+15 files in other folders)
